tests/snapshots/examples_guide/stdlib_pipelines.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/stdlib_pipelines.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
