tests/snapshots/examples_guide/stdlib_process_pipelines.snap
---
source: tests/examples/examples_guide_snapshots.rs
assertion_line: 22
---
Fixture: examples/guide/stdlib_process_pipelines.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
