tests/snapshots/examples_guide/string_interpolation.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/string_interpolation.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
