tests/snapshots/examples_guide/strings.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/strings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
