tests/snapshots/examples_guide/tuple_pipelines.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/tuple_pipelines.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
