tests/snapshots/examples_guide/tuples.snap
---
source: tests/examples/examples_guide_snapshots.rs
assertion_line: 21
---
Fixture: examples/guide/tuples.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
