tests/snapshots/examples_guide/type_builtins.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/type_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
