tests/snapshots/examples_guide/using_constants.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/using_constants.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
