tests/snapshots/examples_guide/using_list_module.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/using_list_module.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
