tests/snapshots/examples_guide/using_modules.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/using_modules.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
