tests/snapshots/examples_guide/variables.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/variables.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
